...
    private val userInterestDao: UserInterestDao
) : UserInterestRepository {

    override suspend fun getCategories(): List<Category> {
        val categoryEntities = listOf(
            CategoryEntity(id = 1, title = "趣味"),          // "Hobby"
            CategoryEntity(id = 2, title = "ライフスタイル"),  // "Lifestyle"
            CategoryEntity(id = 3, title = "価値観")          // "Values"
        )
        return categoryEntities.map { CategoryConverter.dataToDomain(it) }
    }

    override suspend fun getUserInterests(categoryId: Int): List<UserInterest> {
//        val userInterestEntities = userInterestDao.getUserInterestsWithCategory(categoryId)
        var userInterestEntities = emptyList<UserInterestWithCategoryEntity>()
        if(categoryId == 1) {
            userInterestEntities = listOf(
                // 趣味 (Hobby) 카테고리
                UserInterestWithCategoryEntity(interestId = 1, interestTitle = "ヨガ1", interestUrl = "https://www.dabur.com/Blogs/Doshas/Importance%20and%20Benefits%20of%20Yoga%201020x450.jpg", categoryId = 1, categoryTitle = "趣味"),
                UserInterestWithCategoryEntity(interestId = 2, interestTitle = "ヨガ2", interestUrl = "https://www.dabur.com/Blogs/Doshas/Importance%20and%20Benefits%20of%20Yoga%201020x450.jpg", categoryId = 1, categoryTitle = "趣味"),
                UserInterestWithCategoryEntity(interestId = 3, interestTitle = "ヨガ3", interestUrl = "https://www.dabur.com/Blogs/Doshas/Importance%20and%20Benefits%20of%20Yoga%201020x450.jpg", categoryId = 1, categoryTitle = "趣味"),
                UserInterestWithCategoryEntity(interestId = 4, interestTitle = "Hobby Crafting", interestUrl = "https://example.com/hobby4", categoryId = 1, categoryTitle = "趣味"),
                UserInterestWithCategoryEntity(interestId = 5, interestTitle = "Hobby Gaming", interestUrl = "https://example.com/hobby5", categoryId = 1, categoryTitle = "趣味"),
                UserInterestWithCategoryEntity(interestId = 6, interestTitle = "Hobby Painting", interestUrl = "https://example.com/hobby6", categoryId = 1, categoryTitle = "趣味"),
                UserInterestWithCategoryEntity(interestId = 7, interestTitle = "Hobby Photography", interestUrl = "https://example.com/hobby7", categoryId = 1, categoryTitle = "趣味"),
                UserInterestWithCategoryEntity(interestId = 8, interestTitle = "Hobby Reading", interestUrl = "https://example.com/hobby8", categoryId = 1, categoryTitle = "趣味"),
                UserInterestWithCategoryEntity(interestId = 9, interestTitle = "Hobby Writing", interestUrl = "https://example.com/hobby9", categoryId = 1, categoryTitle = "趣味"),
...
